--- a/plugins/twitter_search/view.html
+++ b/plugins/twitter_search/view.html
@@ -1,4 +1,6 @@
+<h2>Twitter Search</h2>
 Recent tweets with '<%= hashtag %>'<br/><br/>
 <% for(var i=0; i < data.length; i++) { %>
-	@<%= data[i]["from_user"] %>: <%= data[i]["text"] %><br/>
+	@<%= data[i]["from_user"] %>: <%= data[i]["text"] %><br/><br/>
 <% } %>
+<br/>
